# ka-cityrail-navigator

./: .gitignore  ANDROID_BUILD_GUIDE.md  CHANGELOG.md  README.md  package-lock.json  package.json  release-please-config-dev.json  release-please-config.json
.github/: CI-README.md
.github/actions/android-signing/: action.yml
.github/actions/configure-android-signing/: action.yml
.github/actions/setup-environment/: action.yml
.github/actions/setup-tauri/: action.yml
.github/workflows/: _build-android.yml  auto-version.yml  build-android.yml  dev-build.yml  pr-validation.yml  release-build.yml  release-playstore.yml  release.yml  security.yml
scripts/: sync-version.sh
src/: App.css  App.tsx  DepartureDetails.css  DepartureDetails.tsx  Settings.css  Settings.tsx  main.tsx  runtimeFallback.test.ts  runtimeFallback.ts  storage.ts  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/2026-02-28-000001_create_stops/: down.sql  up.sql
src-tauri/migrations/2026-02-28-000002_create_networks/: up.sql
src-tauri/migrations/2026-02-28-000003_create_network_stops/: down.sql  up.sql
src-tauri/src/: db.rs  helpers.rs  kvv.rs  lib.rs  main.rs  network.rs  schema.rs  types.rs
src/components/: BottomNav.css  BottomNav.tsx  Icons.tsx  LineBadge.css  LineBadge.tsx  ProximityMap.css  ProximityMap.tsx  RouteMap.tsx  index.ts
