[package]
name = "ka-cityrail-navigator"
version = "0.1.0"
description = "Real-time KVV departure board for Karlsruhe public transport"
authors = ["oliver"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ka_cityrail_navigator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
dotenvy = "0.15"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
diesel = { version = "2", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
dirs = "5"
tauri-plugin-geolocation = "2.3.2"

